# tarot-yorum

./: .dockerignore  .gitignore  DEPLOYMENT_ALTERNATIVE.md  DEPLOYMENT_GUIDE.md  Dockerfile  GITHUB_SETUP.md  README.md  docker-compose.dev.yml  docker-compose.yml  nginx-tarot-yorum.conf  pyproject.toml  render.yaml  spec.md  ubuntu25-setup.sh
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  Dockerfile.dev  README.md  package-lock.json  package.json
backend/migrations/: 001_create_users_table.sql  002_create_profiles_table.sql  003_create_readings_table.sql  004_create_blog_posts_table.sql  005_create_admin_settings_table.sql  006_create_additional_tables.sql
backend/src/: index-simple.ts  index.ts
backend/src/config/: database.ts  redis.ts
backend/src/controllers/: authController.ts
backend/src/middleware/: auth.ts  errorHandler.ts  index.ts  rateLimiter.ts  validation.ts
backend/src/routes/: admin.ts  ai.ts  auth.ts  blogs.ts  readings.ts  (+1 more)
nginx/: nginx.conf
specs/002-modern-mobil-haz/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-gunluk-tarot-yorumu/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/004-g-rsel-tasar/: data-model.md  plan.md  quickstart.md  research.md  spec.md
src/tarot_yorum/: __init__.py  api.py  cli.py  db.py  service.py
src/tarot_yorum_fun.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_cli.py  test_service.py
tests/contract/: test_api_daily.py
tests/integration/: test_admin_flow.py
tests/smoke/: test_health.py  test_static_assets.py
(+8 files in other folders)
